<?xml version="1.0"?>
<package format="3">
  <name>choreonoid_ros</name>
  <version>1.7.0</version>
  <description>The package for using Choreonoid as a ROS node</description>
  <maintainer email="s.nakaoka@gmail.com">Shin'ichiro Nakaoka</maintainer>
  <license>MIT</license>
  <author email="s.nakaoka@gmail.com">Shin'ichiro Nakaoka</author>
  <author email="groadpg@gmail.com">Ryodo Tanaka</author>
  <url type="website">http://choreonoid.org</url>
  <url type="repository">https://github.com/choreonoid/choreonoid_ros.git</url>

  <buildtool_depend condition="$ROS_VERSION == 1">catkin</buildtool_depend>
  <buildtool_depend condition="$ROS_VERSION == 2">ament_cmake</buildtool_depend>
  <depend>choreonoid</depend>

  <depend condition="$ROS_VERSION == 1">roscpp</depend>
  <depend condition="$ROS_VERSION == 2">rclcpp</depend>

  <depend>std_msgs</depend>
  <depend>std_srvs</depend>
  <depend>geometry_msgs</depend>
  <depend>sensor_msgs</depend>
  <depend>image_transport</depend>
  <depend>image_transport_plugins</depend>

  <!-- for ros_control and ros2_control -->
  <depend >controller_manager</depend>
  <depend>hardware_interface</depend>
  <depend condition="$ROS_VERSION == 1">angles</depend>
  <depend condition="$ROS_VERSION == 1">joint_limits_interface</depend>
  <depend condition="$ROS_VERSION == 1">transmission_interface</depend>
  <depend condition="$ROS_VERSION == 1">urdf</depend>
  <depend condition="$ROS_VERSION == 1">pluginlib</depend>

  <depend condition="$ROS_VERSION == 2">ament_index_cpp</depend>
  <depend condition="$ROS_VERSION == 2">controller_manager</depend>
  <depend condition="$ROS_VERSION == 2">rclcpp_lifecycle</depend>
  <depend condition="$ROS_VERSION == 2">realtime_tools</depend>
  <depend condition="$ROS_VERSION == 2">ros2_control</depend>

  <export>
    <build_type condition="$ROS_VERSION == 1">cmake</build_type>
    <build_type condition="$ROS_VERSION == 2">ament_cmake</build_type>
    <choreonoid_ros plugin="${prefix}/plugins.xml"/>
  </export>
</package>
