add_executable(${PROJECT_NAME} choreonoid_ros.cpp)
set_target_properties(${PROJECT_NAME} PROPERTIES OUTPUT_NAME choreonoid)
#target_compile_options(${PROJECT_NAME} PRIVATE -fPIC)
target_link_libraries(${PROJECT_NAME} ${CHOREONOID_BASE_LIBRARIES} ${catkin_LIBRARIES}
  #Qt5::Widgets 
  )

install(TARGETS ${PROJECT_NAME}
  ARCHIVE DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
  LIBRARY DESTINATION ${CATKIN_PACKAGE_LIB_DESTINATION}
  RUNTIME DESTINATION ${CATKIN_PACKAGE_BIN_DESTINATION}
  )
